<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_nav_favorite"
        android:title="@string/title_favorite"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/icon_home_white"
        android:title="@string/title_home"
        android:enabled="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navigation_category"
        android:icon="@drawable/icon_search_white"
        android:title="@string/title_category"
        android:enabled="true"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/icon_user_white"
        android:title="@string/title_profile"
        android:enabled="true"
        app:showAsAction="ifRoom" />
</menu>
